force-app/main/default/objects/AWS_Configuration__mdt/AWS_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Stores AWS SES configuration</description>
    <label>AWS Configuration</label>
    <pluralLabel>AWS Configurations</pluralLabel>
</CustomObject>