force-app/main/default/objects/AWS_Configuration__mdt/fields/SES_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>SES_Endpoint__c</fullName>
    <defaultValue>&quot;https://email.ap-south-1.amazonaws.com&quot;</defaultValue>
    <label>SES Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>